[tool.poetry]
name = "lab-docker"
version = "0.1.0"
description = "NYU Docker Lab"
authors = ["John Rofrano <jjr12@nyu.edu>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
redis = "^5.0.0"
flask-redis = "^0.4.0"
retry = "^0.9.2"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
retry2 = "^0.9.5"

[tool.poetry.group.dev.dependencies]
honcho = "^1.1.0"
pylint = "^3.0.2"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
black = "^24.3.0"
pytest = "^7.4.3"
pytest-pspec = "^0.0.4"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"
coverage = "^7.3.2"
httpie = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

########################################
# Tool configurations
########################################

[tool.flake8]
# ignore = ['E231', 'E241']
per-file-ignores = [
    '*/__init__.py:F401 E402',
]
max-line-length = 127
count = true

[tool.pylint.'MESSAGES CONTROL']
disable = "no-member,protected-access,global-statement"

[tool.pylint.FORMAT]
max-line-length = 127

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--pspec --cov=service --cov-fail-under=95"
testpaths = ["tests"]

[tool.coverage.run]
source = ["service"]
omit = [
    "venv/*",
    ".venv/*"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: no branch",
    "pass",
    "subprocess.CalledProcessError",
    "sys.exit",
    "if __name__ == .__main__.:"
]
ignore_errors = true

[tool.coverage.xml]
output="./coverage.xml"

[tool.coverage.html]
title = "Test Coverage Report"
directory = "coverage_html_report"
